--- a/static/compatibilities/kyverno.yaml
+++ b/static/compatibilities/kyverno.yaml
@@ -49,22 +49,23 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 3.0.0
-  images: ['ghcr.io/kyverno/kyverno:v1.10.0', 'bitnami/kubectl:1.26.4', 'ghcr.io/kyverno/kyvernopre:v1.10.0',
-    'ghcr.io/kyverno/reports-controller:v1.10.0', 'ghcr.io/kyverno/cleanup-controller:v1.10.0',
-    'ghcr.io/kyverno/background-controller:v1.10.0', 'busybox:1.35']
+  images: ['ghcr.io/kyverno/cleanup-controller:v1.10.0', 'bitnami/kubectl:1.26.4',
+    'ghcr.io/kyverno/kyvernopre:v1.10.0', 'ghcr.io/kyverno/background-controller:v1.10.0',
+    'ghcr.io/kyverno/reports-controller:v1.10.0', 'busybox:1.35', 'ghcr.io/kyverno/kyverno:v1.10.0']
 - version: 1.9.0
   kube: ['1.26', '1.25', '1.24']
   requirements: []
   incompatibilities: []
   chart_version: 2.7.0
-  images: ['ghcr.io/kyverno/kyvernopre:v1.9.0', 'busybox:1.35', 'ghcr.io/kyverno/cleanup-controller:v1.9.0',
-    'ghcr.io/kyverno/kyverno:v1.9.0']
+  images: ['ghcr.io/kyverno/cleanup-controller:v1.9.0', 'ghcr.io/kyverno/kyvernopre:v1.9.0',
+    'ghcr.io/kyverno/kyverno:v1.9.0', 'busybox:1.35']
 - version: 1.8.0
   kube: ['1.25', '1.24', '1.23']
   requirements: []
   incompatibilities: []
   chart_version: 2.6.0
-  images: [busybox, 'ghcr.io/kyverno/kyvernopre:v1.8.0', 'ghcr.io/kyverno/kyverno:v1.8.0']
+  images: ['ghcr.io/kyverno/kyvernopre:v1.8.0', 'ghcr.io/kyverno/kyverno:v1.8.0',
+    busybox]
 - version: 1.7.0
   kube: ['1.23', '1.22', '1.21']
   requirements: []
@@ -76,5 +77,5 @@ versions:
   requirements: []
   incompatibilities: []
   chart_version: 2.2.0
-  images: ['ghcr.io/kyverno/kyverno:v1.6.0', 'ghcr.io/kyverno/kyvernopre:v1.6.0',
+  images: ['ghcr.io/kyverno/kyvernopre:v1.6.0', 'ghcr.io/kyverno/kyverno:v1.6.0',
     busybox]
