--- a/charts/controller/crds/deployments.plural.sh_prautomations.yaml
+++ b/charts/controller/crds/deployments.plural.sh_prautomations.yaml
@@ -465,6 +465,10 @@ spec:
                 description: Lua specification to source lua scripts to preprocess
                   the PR automation.
                 properties:
+                  external:
+                    description: Whether the lua script is sourced from an external
+                      git repo bound to this automation
+                    type: boolean
                   folder:
                     description: Folder with lua library code and scripts to use
                     type: string
