--- a/charts/console-rapid/Chart.yaml
+++ b/charts/console-rapid/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: console-rapid
 description: rapid channel chart for the plural console (used for testing)
 appVersion: 0.11.54
-version: 0.3.161
+version: 0.3.162
 dependencies:
   - name: kas
     version: 0.3.0
@@ -20,4 +20,8 @@ dependencies:
     version: 2.14.1
     repository: https://fluxcd-community.github.io/helm-charts
     condition: flux2.enabled
+  - name: dex
+    version: 0.24.0
+    repository: https://charts.dexidp.io
+    condition: dex.enabled
 type: application
