--- a/charts/console/Chart.yaml
+++ b/charts/console/Chart.yaml
@@ -3,7 +3,7 @@ name: console
 description: >-
   deploys the plural console and additional dependencies, for use in bring-your-own-kube setups
 appVersion: 0.11.54
-version: 0.3.129
+version: 0.3.130
 dependencies:
   - name: kas
     version: 0.3.0
@@ -24,4 +24,5 @@ dependencies:
   - name: dex
     version: 0.24.0
     repository: https://charts.dexidp.io
+    condition: dex.enabled
 type: application
