--- a/plural/helm/console/crds/deployments.plural.sh_infrastructurestacks.yaml
+++ b/plural/helm/console/crds/deployments.plural.sh_infrastructurestacks.yaml
@@ -9734,7 +9734,7 @@ spec:
                 type: object
               repositoryRef:
                 description: RepositoryRef references the GitRepository containing
-                  the IaC source code. Leave empty to use RepositoryUrl instead.
+                  the IaC source code. Leave empty to use git:url instead.
                 properties:
                   apiVersion:
                     description: API version of the referent.
