--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -288,6 +288,15 @@
   publisher: akuity
 - name: amazon-cloudwatch-observability
   versions:
+  - version: v5.0.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
   - version: v4.7.0-eksbuild.1
     compatibilities:
     - '1.34'
@@ -996,6 +1005,14 @@
   publisher: AppViewX
 - name: aws-ebs-csi-driver
   versions:
+  - version: v1.54.0-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.53.0-eksbuild.1
     compatibilities:
     - '1.34'
@@ -7165,6 +7182,13 @@
   publisher: Splunk
 - name: sriov-network-metrics-exporter
   versions:
+  - version: v1.2.0-eksbuild.0
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
   - version: v1.1.1-eksbuild.3
     compatibilities:
     - '1.34'
