--- a/static/compatibilities/kube-prometheus-stack.yaml
+++ b/static/compatibilities/kube-prometheus-stack.yaml
@@ -3,6 +3,7 @@ git_url: https://github.com/prometheus-community/helm-charts
 release_url: https://github.com/prometheus-community/helm-charts/releases/tag/kube-prometheus-stack-{vsn}
 readme_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/main/charts/kube-prometheus-stack/README.md
 helm_repository_url: https://prometheus-community.github.io/helm-charts
+chart_changelog_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/refs/heads/main/charts/kube-prometheus-stack/UPGRADE.md
 versions:
 - version: 80.4.2
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
