--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -1060,6 +1060,15 @@
   publisher: AppViewX
 - name: aws-ebs-csi-driver
   versions:
+  - version: v1.55.0-eksbuild.1
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.54.0-eksbuild.1
     compatibilities:
     - '1.35'
@@ -8041,6 +8050,15 @@
   publisher: Upwind Security
 - name: vpc-cni
   versions:
+  - version: v1.21.1-eksbuild.3
+    compatibilities:
+    - '1.35'
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.21.1-eksbuild.1
     compatibilities:
     - '1.35'
