--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -4125,6 +4125,16 @@
   publisher: CyberArk
 - name: datadog_operator
   versions:
+  - version: v0.1.23-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
   - version: v0.1.21-eksbuild.1
     compatibilities:
     - '1.34'
