--- a/static/compatibilities/kubescape-operator.yaml
+++ b/static/compatibilities/kubescape-operator.yaml
@@ -8,7 +8,18 @@ versions:
   kube: ['1.35', '1.34', '1.33']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: ['1.30.0: Fixed otel-collector deployment to support using an external
+        OTEL URL without requiring a cloud provider configuration.', '1.30.0: Adjusted
+        NetworkPolicies to (a) allow prometheus-exporter egress and storage ingress,
+        and (b) allow Prometheus ServiceMonitor traffic for kubescape.', '1.30.0:
+        Added/introduced an image-based feature (per release note: "Feat/image based").',
+      '1.30.2: No specific chart changes listed in the provided release notes (release
+        page content did not include a "What''s Changed" section in the excerpt).']
+    features: ['1.30.0: Introduced an image-based capability/feature (release note:
+        "Feat/image based").']
+    breaking_changes: []
   chart_version: 1.30.2
   images: []
 - version: 1.30.0
@@ -308,7 +319,29 @@ versions:
   kube: ['1.30', '1.29', '1.28']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: "### Helm values / install changes\n- **Optional: disable SSL/TLS\
+      \ verification**: chart adds a value to allow skipping SSL verification (exact\
+      \ key name not shown in your notes; search the chart\u2019s `values.yaml`/README\
+      \ for `skipSslVerification`, `insecure`, or similar before upgrading).\n- **New\
+      \ `imagePullSecrets` support** for **node-agent** and **servicediscovery**:\
+      \ you can now configure pull secrets for these components (again, confirm the\
+      \ exact values path in `values.yaml`, likely something like `nodeAgent.imagePullSecrets`\
+      \ and `serviceDiscovery.imagePullSecrets`).\n\n### If you were using 1.18.11\
+      \ RC features\n- **Rule-based alerting (beta/RC)** in 1.18.11 required enabling\
+      \ multiple capabilities/CRDs:\n  - `capabilities.runtimeDetection=enable`\n\
+      \  - `capabilities.malwareDetection=enable`\n  - `alertCRD.installDefault=true`\n\
+      \  - `alertCRD.scopeClustered=true`\n  - `nodeAgent.config.prometheusExporter=enable`\n\
+      \  Re-validate these values are still correct/needed in 1.19.1 and that the\
+      \ chart hasn\u2019t renamed any keys."
+    chart_updates: [Release packaging updates for 1.19.1 (chart release prep)., Chart
+        adds configuration hooks for skipping SSL verification., Chart adds `imagePullSecrets`
+        wiring for node-agent and servicediscovery.]
+    features: ['Option to skip SSL verification (useful for environments with intercepting
+        proxies or custom CAs, but reduces transport security if misused).', Support
+        for setting imagePullSecrets on node-agent and servicediscovery to pull from
+        private registries.]
+    breaking_changes: []
   chart_version: 1.19.1
   images: ['quay.io/kubescape/kubescape:v3.0.13', 'quay.io/kubescape/kubevuln:v0.3.25',
     'quay.io/kubescape/node-agent:v0.2.93', 'quay.io/kubescape/operator:v0.2.13',
@@ -331,7 +364,18 @@ versions:
   kube: ['1.29', '1.28', '1.27']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: []
+    features: [1.17.0 enables network policy generation., 1.17.0 enables Application
+        Profiles and exposes them via `kubectl get applicationprofiles -A`., 1.17.0
+        makes Application Activities available by default and exposes them via `kubectl
+        get applicationactivities -A`., 1.17.0 enables the Synchronizer component
+        for future development work., '1.18.0 switches the internal SBOM format from
+        SPDX to Syft, which is expected to reduce false positives.']
+    breaking_changes: ["1.18.0 SBOM format change (SPDX \u2192 Syft): previously collected\
+        \ SBOM-related data is ignored and must be re-collected after upgrade; SPDX\
+        \ is no longer supported."]
   chart_version: 1.18.0
   images: ['quay.io/kubescape/kubescape:v3.0.3', 'quay.io/kubescape/kubevuln:v0.3.0',
     'quay.io/kubescape/node-agent:v0.2.4', 'quay.io/kubescape/operator:v0.2.1', 'quay.io/kubescape/storage:v0.0.60']
